# norminette

./: .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Dockerfile  LICENSE  README.md  a.out  action.yml  colors.py  deploy.sh  dictionary.py  lexer.py  main.py  norminette.py  norminette_2.4.pkg  pyproject.toml  requirements.txt  rules.py  setup.cfg  setup.py  test.c  test.sh  token.py  tokens.py  tox.ini
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md
.github/workflows/: python-package.yml  python-publish.yml  qa.yaml  setup-norminette.yaml
Dictionary/: delimiters.py  keywords.py
docs/: README
docs/en/: en.norm.tex
docs/fr/: fr.norme.tex
docs/ru/: ru.norm.tex
docs/tr/: tr.norm.tex
norm_pdf/: norme.en.tex
norminette/: __init__.py  __main__.py  a.c  c.c  colors.py  context.py  errors.py  exceptions.py  file.py  func.c  functest.c  h.h  norm_error.py  registry.py  run_test.sh  s.c  scope.py  test.c  test.py  test_result  utils.py  version.py
norminette/lexer/: __init__.py  dictionary.py  lexer.py  tokens.py
norminette/rules/: __init__.py  _check_func_declarations.py  _check_var_declarations.py  check_assignation.py  check_assignation_indent.py  check_assignment.py  check_block_start.py  check_brace.py  check_comment.py  check_comment_line_len.py  check_control_statement.py  check_control_statements.py  check_declaration.py  check_empty_func_params.py  check_empty_line.py  check_enum_var_decl.py  check_expression_statement.py  check_func_argument_count.py  check_func_arguments_name.py  check_func_declaration.py  check_func_declarations.py  check_func_declarations_rule.py  check_func_name.py  check_func_spacing.py  check_functions_count.py  check_general_indentation.py  check_general_spacing.py  check_global_naming.py  check_header.py  check_identifier_name.py  check_in_header.py  check_instruction.py  check_label.py  check_line_count.py  check_line_indent.py  check_line_len.py  check_line_trailing_whitespace.py  check_many_instructions.py  check_nest_line_indent.py  check_nest_operators.py  (+45 more)
norminette/tests/: __init__.py  a.c  c.c  func.c  functest.c  ko_struct_name.out  loop.zsh  random_test_save.c  time.zsh
norminette/tests/files/: __init__.py  dict.py  file_token_test.py  ko_test_1.err  ko_test_2.c  ko_test_2.err  ko_test_3.c  ko_test_3.err  ko_test_4.c  ko_test_4.err  ko_test_5.c  ko_test_5.err  ko_test_6.c  ko_test_6.err  ko_test_7.c  ko_test_7.err  ok_test_2.c  (+6 more)
norminette/tools/: colors.py
pdf/: Makefile  en.norm.tex  es.norm.tex  fr.norm.tex  fr.norme.tex  ja.norm.tex  ko.norm.tex  norme.en.fdb_latexmk  norme.en.fls  pt_br.norm.tex
rules/: first_rule.py  one_two_three_four_rule.py  second_rule.py  third_rule.py
tests/: a  ko_bad_spacing.c  ko_header_tab_in_header.c  ko_many_errors.c  maintest.py  ok_ft_memset.c  ok_ft_memset.tokens  ok_header.c  ok_include.h  test_errors.py  test_lexer.py  utils.py
tests/files/: file_token_test.py  ko_bad_spacing.c  ko_bad_spacing.tokens  ok_test_3.tokens  tokenization_test1.c  tokenization_test1.tokens  tokenization_test5.c  tokenization_test5.tokens  tokenization_test7.tokens
tests/lexer/: brackets_tokens_test.py  char_constant_tokens_test.py  constant_tokens_test.py  identifiers_tokens_test.py  keywords_tokens_test.py  operators_tokens_test.py  string_tokens_test.py
tests/rules/: rules_generator_test.py
tests/tokenizer/: token_errors_test.py  token_generator_test.py
tests/unit/: __init__.py  brackets_tokens_test.py  char_constant_tokens_test.py  constant_tokens_test.py  identifiers_tokens_test.py  keywords_tokens_test.py  operators_tokens_test.py  single_token_test.py  string_tokens_test.py  token_operators_test.py  tokens_brackets_test.py  tokens_lines_test.py  tokens_operators_test.py
(+369 files in other folders)
