[tool.poetry]
name = "norminette"
version = "3.3.51"
description = "Open source norminette to apply 42's norme to C files."
license = "MIT License"
authors = ["42 <pedago@42.fr>"]
maintainers = ["42 <pedago@42.fr>"]
readme = "README.md"
homepage = "https://pypi.org/project/norminette/"
repository = "https://github.com/42School/norminette"
documentation = "https://pypi.org/project/norminette/"
keywords = ["42", "Norme", "norminette", "C", "linter"]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10"
]
packages = [
	{ include = "norminette" },
	{ include = "lexer", from = "norminette" },
	{ include = "rules", from = "norminette" },
	{ include = "tools", from = "norminette" },
]

[tool.poetry.dependencies]
python = ">=3.7"
click = "^8"

[tool.poetry.dev-dependencies]
tox = "^3.25.0"

[tool.poetry.scripts]
norminette = "norminette.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
