[tool.poetry]
name = "norminette"
version = "3.3.55"
description = "Open source C files linter for 42 Network campuses"
authors = ["42 <pedago@42.fr>"]
license = "MIT Licence"
readme = "README.md"
repository = "https://github.com/42School/norminette"
keywords = ['42', 'norminette']
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.8.1"
argparse = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
tox = "^4.6.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
norminette = "norminette.__main__:main"
