[metadata]
name = norminette
version = attr: norminette.__version__
description = Open source norminette to apply 42's norme to C files
long_description = file: README.md
long_description_content_type = text/markdown
author = 42
author_email = pedago@42.fr
url = https://github.com/42School/norminette
keywords = 42,norminette
license = MIT License
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
packages = norminette, norminette.lexer, norminette.rules, norminette.tools
zip_safe = False
include_package_data = True
python_requires = >= 3.7
install_requires =
    argparse

[options.entry_points]
console_scripts = norminette=norminette.__main__:main
